# P3_ABlanco_PMendez_FPicado_JMora

./: .gitignore  CMakeLists.txt  ControllerNode.cpp  ControllerNode.h  DiskNode.cpp  DiskNode.h  DiskNodeServer.cpp  DiskNodeServer.h  HttpServer.cpp  HttpServer.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  RemoteDiskClient.cpp  RemoteDiskClient.h  ServerThread.cpp  ServerThread.h  TECMFS-Disk.cpp  TECMFS-Disk.h  config.xml  downloaded_test.txt  main.cpp  test2.txt  ui_mainwindow.h
config/: config.xml  node1.xml  node2.xml  node3.xml  node4.xml
